1.3.4
- Added closure analysis.
- Bugfix: Hans skin tries to close some left-over html tag to get a
  proper display
- Change: Removed the jQuery setting
- Bugfix: The display of the settings in the footer does do a
  callable analysis anymore, which may be a little bit confusing.

1.3.3
- kreXX will now work without a writable chunks folder, but this will
  require a much more memory.
- Bugfix: No data from the Magento debug() function when uses as a
  configurable debug function.
- Bugfix: String encoding detection now works as intended. This should
  speed up things a lot.
- Bugfix: Dual output (file and frontend) works again.
- Bugfix: CLI detection now respects file output configuration.
- Bugfix: X-Browser Adjustments for the Hans skin.
- Change: Restructured the output, to make it (hopefully) better
  readable. The format is now much more similar to the actual code.
- Change: Refactored file handling (chunks and logfiles).
- Change: Cleaned up the file structure.
- Change: kreXX will now evaluate all cookie settings right away, and
  not when the value is actually needed (if at all).

1.3.2
- Bugfix: Removed that annoying "Hidden internal properties"
  message.
- Bugfix /Feature: Added a small blacklist of classname/debugfunction
  combination which may cause problems during object analysis.
- Removed the old and ugly schablon skin.
- Added composer.json

1.3.1
- Bugfix: Local open function is working again.
- Bugfix: Displaying the local configuration does not
  re-enable kreXX anymore.
- Bugfix: Emergency break does not trigger a false positive
  anymore.
- Bugfix: Display of wrong values in the settings, in case
  those settings are not editable and there are some leftover
  values in the settings cookie.
- Bugfix: Proper display of static values in objects.
- Bugfix: Proper display of internal properties of predefined
  php classes
- Removed the Debug Cookie in favor for the local open
  function

1.3.0
- Added search function to the Hans skin.