@@ -214,12 +214,12 @@ em.ktype {
   font-weight: bold;
   height: 24px;
   width: 24px;
-  position: relative;
+  /*position: relative;*/
 }
 .klogo-xx {
-  position: absolute;
-  top: 6px;
-  left:4px;
+  /*position: absolute;*/
+  padding-left: 3px;
+  vertical-align: -5px;
 }
 .kheadnote-wraper {
   width: 100%;
@@ -240,7 +240,7 @@ em.ktype {
   color: #b1b1b1;
   font: bold 12px tahoma,verdana;
   padding-left: 5px;
-  position: absolute;
+  /*position: absolute;*/
   top: 7px;
 }
 .kwrapper .call {
@@ -526,7 +526,7 @@ ul.kconfiguration li.kchild {
   border-radius: 8px;
   padding: 4px;
   font: 12px tahoma,verdana;
-  z-index: 1;
+  z-index: 10;
 }
 .search-wrapper .ksearch:hover {
   background-color: #ffcd00;
