@@ -5,6 +5,10 @@
 - Change: Removed the jQuery setting
 - Bugfix: The display of the settings in the footer does do a
   callable analysis anymore, which may be a little bit confusing.
+- Bugfix: Fixed a small display issue with the search in the Hans
+  skin
+- Bugfix: The Collapse-Everything-Else function from the hans skin
+  does not affect other debug output anymore.
 
 1.3.3
 - kreXX will now work without a writable chunks folder, but this will
